{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 46,
  "lineage": "cbc7254d-d032-3fd2-1d92-873f479256ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudshop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group/sg-0699d7166d5448850",
            "description": "sg-cloudshop",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0699d7166d5448850",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudshop-sg",
            "name_prefix": "",
            "owner_id": "375033339237",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-cloudshop"
            },
            "tags_all": {
              "Name": "sg-cloudshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d6c977efb408bfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sg-0699d7166d5448850",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudshop_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group/sg-0423932858b4be6f2",
            "description": "sg-cloudshop_eks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0423932858b4be6f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0699d7166d5448850"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "cloudshop-eks-sg",
            "name_prefix": "",
            "owner_id": "375033339237",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-cloudshop_eks"
            },
            "tags_all": {
              "Name": "sg-cloudshop_eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d6c977efb408bfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sg-0423932858b4be6f2",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudshop-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:subnet/subnet-0581d5e398302550f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0581d5e398302550f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375033339237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-01d6c977efb408bfe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "subnet-0581d5e398302550f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudshop-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:subnet/subnet-0da45aa87b36ee0ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da45aa87b36ee0ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375033339237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "cloudshop-subnet-1"
            },
            "tags_all": {
              "Name": "cloudshop-subnet-1"
            },
            "vpc_id": "vpc-01d6c977efb408bfe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "subnet-0da45aa87b36ee0ab",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudshop_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:vpc/vpc-01d6c977efb408bfe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c9dbc2e2379157f",
            "default_route_table_id": "rtb-0bbe21dc86f2f805b",
            "default_security_group_id": "sg-089a21c2e1033892d",
            "dhcp_options_id": "dopt-004fb3039553373c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d6c977efb408bfe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbe21dc86f2f805b",
            "owner_id": "375033339237",
            "region": "eu-west-1",
            "tags": {
              "Name": "cloudshop-vpc"
            },
            "tags_all": {
              "Name": "cloudshop-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "vpc-01d6c977efb408bfe",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group-rule/sgr-02ce8f96049377464",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02ce8f96049377464",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0423932858b4be6f2",
            "security_group_rule_id": "sgr-02ce8f96049377464",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sgr-02ce8f96049377464",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.cloudshop_eks",
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group-rule/sgr-09b0ed55e816f51c2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09b0ed55e816f51c2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0699d7166d5448850",
            "security_group_rule_id": "sgr-09b0ed55e816f51c2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sgr-09b0ed55e816f51c2",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.cloudshop",
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group-rule/sgr-01b9e6c7b5d32361f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01b9e6c7b5d32361f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0699d7166d5448850",
            "security_group_rule_id": "sgr-01b9e6c7b5d32361f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sgr-01b9e6c7b5d32361f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.cloudshop",
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group-rule/sgr-0a4eec6ca99e41c9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a4eec6ca99e41c9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0699d7166d5448850",
            "security_group_rule_id": "sgr-0a4eec6ca99e41c9b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sgr-0a4eec6ca99e41c9b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.cloudshop",
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group-rule/sgr-055fc48827a61de03",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-055fc48827a61de03",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0423932858b4be6f2",
            "region": "eu-west-1",
            "security_group_id": "sg-0423932858b4be6f2",
            "security_group_rule_id": "sgr-055fc48827a61de03",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sgr-055fc48827a61de03",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.cloudshop_eks",
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_traffic_from_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375033339237:security-group-rule/sgr-0ceb1812a4f4744fc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5000,
            "id": "sgr-0ceb1812a4f4744fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0699d7166d5448850",
            "region": "eu-west-1",
            "security_group_id": "sg-0423932858b4be6f2",
            "security_group_rule_id": "sgr-0ceb1812a4f4744fc",
            "tags": null,
            "tags_all": {},
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "375033339237",
            "id": "sgr-0ceb1812a4f4744fc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.cloudshop",
            "aws_security_group.cloudshop_eks",
            "aws_vpc.cloudshop_vpc"
          ]
        }
      ]
    }
  ]
}